# ai-research-crew

./: .env.example  .gitignore  README.md  pyproject.toml
src/ai_research_crew/: crew.py  main.py
src/ai_research_crew/config/: agents.yaml  tasks.yaml
