[project]
name = "ai-research-crew"
version = "0.1.0"
description = "Multi-agent research system with 3 specialized AI agents"
authors = [
    {name = "Ricardo Lima", email = "ricardo.bardan@gmail.com"}
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.0.0,<2.0.0",
    "langchain-google-genai>=1.0.0",
]

[project.scripts]
ai_research_crew = "ai_research_crew.main:run"
train = "ai_research_crew.main:train"
replay = "ai_research_crew.main:replay"
test = "ai_research_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_research_crew"]

[tool.crewai]
type = "crew"
